--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><a href="https://www.google.com" target = "_blank" >  <img src="image2" alt="" height="200px" width = "200px" shadow = "30px"></a></td>
+      <td><a href="https://www.google.com" target = "_blank" >  <img src="azaz1.jpg" alt="" height="200px" width = "200px" shadow = "30px"></a></td>
       <td><h1>This a Heading </h1>
     <p>CEO at <em>Google</em><span> </span><strong>Inc, USA</strong></p>
     <P>Filler text is text that shares some characteristics of a real written text, but is random or otherwise generated.</P></td>
